<resources>
    <string name="app_name">Boomshine</string>
    <string name="sAbout">About</string>
    <string name="sDevLabel">Developers</string>
    <string name="sForbes">Forbes Miyasato</string>
    <string name="sThomas">Thomas Robasciotti</string>
    <string name="sVersionLabel">Version</string>
    <string name="sVersion">V 0.0.1</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="play_anyway">Play As Guest</string>
    <string name="game_menu">GameMenu</string>
    <string name="play">Play</string>
    <string name="game_over_title">Game Over</string>
    <string name="game_over_score">Score</string>
    <string name="game_over_play_again">Play Again</string>
    <string name="game_over_quit">Quit</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="points_text">Points:</string>
    <string name="buy">Buy</string>
    <string name="multi_cost">10 Points</string>
    <string name="super_cost">20 Points</string>
    <string name="ulti_cost">50 Points</string>
    <string name="power_ups">Power Ups</string>
    <string name="highscores">HighScores</string>
    <string name="coin_source">Coin Icon by Ravindra Kalkani on Iconscout</string>
    <string name="zap_splat_link">Sound effects obtained from https://www.zapsplat.com</string>
</resources>
