<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/boomshine" />

            <TextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="+ CREATE ACCOUNT"
                android:textColor="@color/cWhite"
                android:textStyle="bold" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:met_iconRight="@drawable/ic_account" />
        <!--            app:met_textColorHint="@color/cGray"-->
        <!--            app:met_baseColor="@color/cAqua"-->
        <!--            app:met_primaryColor="@color/cAqua"-->
        <!--            app:met_iconPadding="0dp"-->


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_iconRight="@drawable/ic_lock" />
        <!--                    app:met_textColorHint="@color/cGray"-->
        <!--        app:met_baseColor="@color/cAqua"-->
        <!--        app:met_primaryColor="@color/cAqua"-->
        <!--        app:met_iconPadding="0dp"-->


    </LinearLayout>

    <Button
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/cGrass1"
        android:onClick="loginClicked"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/play_anyway"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="playAsGuestClicked"
        android:text="@string/play_anyway"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>
