<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:src="@drawable/multiball" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:src="@drawable/superball" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:src="@drawable/ulti" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="113dp"
        android:layout_height="53dp"
        android:layout_marginStart="241dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="100dp"
        android:text="@string/points_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/points_amount"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:layout_marginTop="21dp"
        android:textSize="30sp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/multi_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="20dp"
        android:onClick="onMultiBuy"
        android:text="@string/buy"
        app:layout_constraintEnd_toStartOf="@+id/super_buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPW" />

    <Button
        android:id="@+id/super_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="20dp"
        android:onClick="loginClicked"
        android:text="@string/buy"
        app:layout_constraintEnd_toStartOf="@+id/ulti_buy"
        app:layout_constraintStart_toEndOf="@+id/multi_buy"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPW" />

    <Button
        android:id="@+id/ulti_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="29dp"
        android:onClick="onUltiBuy"
        android:text="@string/buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/super_buy"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPW" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/multi_cost"
        app:layout_constraintBottom_toTopOf="@+id/multi_buy"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPW" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="16dp"
        android:text="@string/super_cost"
        app:layout_constraintBottom_toTopOf="@+id/super_buy"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPW" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="15dp"
        android:text="@string/ulti_cost"
        app:layout_constraintBottom_toTopOf="@+id/ulti_buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPW" />

    <Button
        android:id="@+id/button4"
        android:layout_width="217dp"
        android:layout_height="81dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="97dp"
        android:onClick="onBackClicked"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multi_buy" />

</androidx.constraintlayout.widget.ConstraintLayout>